--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,13 @@ classifiers = [
 ]
 dependencies = ["rich", "textual"]
 
+[dependency-groups]
+dev = [
+    "pytest>=8.3.4",
+    "pytest-asyncio>=0.25.0",
+    "pytest-timeout>=2.3.1",
+]
+
 [project.urls]
 homepage = "https://tuitorial.readthedocs.io/"
 documentation = "https://tuitorial.readthedocs.io/"
@@ -138,8 +145,3 @@ max-complexity = 18
 
 [tool.mypy]
 python_version = "3.10"
-
-[dependency-groups]
-dev = [
-    "pytest-asyncio>=0.25.0",
-]
