--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,8 @@ dev = [
     "pytest>=8.3.4",
     "pytest-asyncio>=0.25.0",
     "pytest-timeout>=2.3.1",
+    "ipython>=8.31.0",
+    "ipykernel>=6.29.5",
 ]
 
 [project.urls]
