Add initial YAML file format implementation

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,3 +21,5 @@ repos:
     hooks:
       - id: mypy
         exclude: ipynb_filter.py|docs/source/conf.py
+        additional_dependencies:
+          - types-PyYAML
