--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -27,3 +27,9 @@ jobs:
       - name: Run pytest
         run: |
           uv run pytest
+
+      - name: Upload coverage to Codecov
+        if: matrix.python-version == '3.13'
+        uses: codecov/codecov-action@v5
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
