--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dependencies = [
     "pyyaml>=6.0.2",
     "rich",
     "textual",
+    "textual-image[textual]>=0.6.6",
 ]
 
 [dependency-groups]
