--- a/examples/pipefunc.yaml
+++ b/examples/pipefunc.yaml
@@ -47,6 +47,8 @@ chapters:
           cache_type="hybrid",  # optionally cache the pipeline
       )
 
+      pipeline.visualize()
+
       # Let's execute the pipeline
       pipeline(a=1, b=2)  # returns 12
       pipeline("d", a=1, b=2)  # returns 6
@@ -101,6 +103,17 @@ chapters:
             lines_after: 2
             style: "bright_blue bold"
 
+      - description: Visualize the Pipeline
+        focus:
+          - type: line_containing
+            pattern: pipeline.visualize()
+            style: "bright_yellow bold"
+
+      - description: Output of [bold blue]pipeline.visualize()[/]
+        image: pipeline.png
+        height: auto
+        width: 60%
+
       - description: "Pipeline Execution\nCall the pipeline with inputs and get the result"
         focus:
           - type: line_containing
@@ -121,3 +134,14 @@ chapters:
           - type: line_containing
             pattern: output_name="e"
             style: "cyan bold"
+  - title: "Pipeline Execution"
+    code: |
+      pipeline(a=1, b=2)  # returns 12
+      pipeline("d", a=1, b=2)  # returns 6
+      pipeline("e", a=1, b=2)  # returns 12
+      pipeline.run("e", {"a": 1, "b": 2})  # returns 12
+      pipeline.run("d", {"a": 1, "b": 2})  # returns 12
+
+      pipeline.map({"a": 1, "b": 2})  # returns {"c": Result(output=3, ...), "d": Result(output=6, ...), "e": Result(output=12, ...)}
+    steps:
+      - description: Pipeline
