--- a/examples/pipefunc.yaml
+++ b/examples/pipefunc.yaml
@@ -1,3 +1,8 @@
+title_slide:
+  title: PipeFunc
+  subtitle: |
+    Structure, Automate, and Simplify Your Computational Workflows
+    - by Bas Nijholt <bas@nijho.lt>
 chapters:
   - title: "Introduction"
     type: bullet_points
