--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ dev = [
     "pytest-timeout>=2.3.1",
     "ipython>=8.31.0",
     "ipykernel>=6.29.5",
+    "watchfiles>=1.0.3",
 ]
 
 [project.urls]
