--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
     "rich",
     "textual",
     "textual-image[textual]>=0.7.0",
+    "watchfiles>=1.0.3",
 ]
 
 [dependency-groups]
