Use dictionaries in `bullet_points:` in YAML

--- a/examples/pipefunc.yaml
+++ b/examples/pipefunc.yaml
@@ -7,25 +7,24 @@ chapters:
   - title: "Introduction"
     type: bullet_points
     bullet_points:
-      - "Scientists and engineers often work with complex simulation workflows."
-      - "Core logic is often encapsulated in functions that depend on each other."
-      - "Managing complex computational workflows can be challenging."
-      - "Keeping track of dependencies between functions requires a lot of bookkeeping."
-      - "Once you have a working pipeline, you may want to run it with different parameters."
-      - "Running on laptop usually requires vastly different code than in parallel on a cluster."
-      - "Reproducibility and maintainability are crucial in scientific computing."
-      - "Ideally, we focus on the science and not the plumbing."
-      - "What if we could automate the creation, execution, and management of function pipelines?"
-    extras:
-      - "These workflows involve multiple steps, such as data preprocessing, model execution, and analysis."
-      - "For example, [bold blue]calculate_fidelity(...)[/] might depend on the output of [bold blue]create_circuit(...)[/], which also depends on other inputs."
-      - "As the number of steps and dependencies increases, it becomes harder to keep track of the flow of data and ensure correct execution."
-      - "Manually managing inputs and outputs for each function can be error-prone and time-consuming."
-      - "This usually involves writing boilerplate code with loops over the parameters, executing the functions, and collecting the results."
-      - "Adapting code for different execution environments often involves significant code duplication and platform-specific logic."
-      - "It's essential to be able to rerun experiments with the same results and easily update or extend the workflow."
-      - "Scientists should spend more time on the problem and less time on writing execution details and boilerplate code."
-      - "Not wasting time on plumbing and gathering results!"
+      - text: "Scientists and engineers often work with complex simulation workflows."
+        extra: "These workflows involve multiple steps, such as data preprocessing, model execution, and analysis."
+      - text: "Core logic is often encapsulated in functions that depend on each other."
+        extra: "For example, [bold blue]calculate_fidelity(...)[/] might depend on the output of [bold blue]create_circuit(...)[/], which also depends on other inputs."
+      - text: "Managing complex computational workflows can be challenging."
+        extra: "As the number of steps and dependencies increases, it becomes harder to keep track of the flow of data and ensure correct execution."
+      - text: "Keeping track of dependencies between functions requires a lot of bookkeeping."
+        extra: "Manually managing inputs and outputs for each function can be error-prone and time-consuming."
+      - text: "Once you have a working pipeline, you may want to run it with different parameters."
+        extra: "This usually involves writing boilerplate code with loops over the parameters, executing the functions, and collecting the results."
+      - text: "Running on laptop usually requires vastly different code than in parallel on a cluster."
+        extra: "Adapting code for different execution environments often involves significant code duplication and platform-specific logic."
+      - text: "Reproducibility and maintainability are crucial in scientific computing."
+        extra: "It's essential to be able to rerun experiments with the same results and easily update or extend the workflow."
+      - text: "Ideally, we focus on the science and not the plumbing."
+        extra: "Scientists should spend more time on the problem and less time on writing execution details and boilerplate code."
+      - text: "What if we could automate the creation, execution, and management of function pipelines?"
+        extra: "Not wasting time on plumbing and gathering results!"
     marker: "1."
     style: "bright_yellow bold"
 
