--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ dev = [
     "pytest-timeout>=2.3.1",
     "ipython>=8.31.0",
     "ipykernel>=6.29.5",
+    "versioningit>=3.1.2",
 ]
 
 [project.urls]
