--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,13 @@ dev = [
     "ipython>=8.31.0",
     "ipykernel>=6.29.5",
     "versioningit>=3.1.2",
+    "sphinx-autodoc-typehints>=3.0.0",
+    "myst-nb>=1.1.2",
+    "sphinx-togglebutton>=0.3.2",
+    "sphinx-copybutton>=0.5.2",
+    "sphinx-notfound-page>=1.0.4",
+    "emoji>=2.14.0",
+    "sphinx-book-theme>=1.1.3",
 ]
 
 [project.urls]
