--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,16 +1,19 @@
 version: 2
 
 build:
-    os: "ubuntu-22.04"
-    tools:
-        python: "mambaforge-latest"
-    jobs:
-        post_checkout:
-            - git fetch --unshallow || true
+  os: "ubuntu-22.04"
+  tools:
+    python: "3.10"
+  commands:
+    - asdf plugin add uv
+    - asdf install uv latest
+    - asdf global uv latest
+    - uv sync --dev --frozen
+    - uv run -m sphinx -T -b html -d docs/_build/doctrees -D language=en docs $READTHEDOCS_OUTPUT/html
+  jobs:
+    post_checkout:
+      - git fetch --unshallow || true
 
 sphinx:
-    configuration: docs/source/conf.py
-    builder: dirhtml
-
-conda:
-    environment: docs/environment-sphinx.yml
+  configuration: docs/source/conf.py
+  builder: dirhtml
