--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,10 @@ dev = [
     "sphinx-book-theme>=1.1.3",
     "sphinxcontrib-video>=0.3.2",
 ]
+browser = [
+    "jupyter-bokeh>=4.0.5",
+    "panel>=1.5.5",
+]
 
 [project.urls]
 homepage = "https://tuitorial.readthedocs.io/"
