--- a/.github/workflows/markdown-code-runner.yml
+++ b/.github/workflows/markdown-code-runner.yml
@@ -33,6 +33,7 @@ jobs:
         id: commit
         run: |
           git add README.md
+          git checkout uv.lock
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           if git diff --quiet && git diff --staged --quiet; then
