Use lava as default

--- a/examples/tuitorial.yaml
+++ b/examples/tuitorial.yaml
@@ -3,7 +3,7 @@ title_slide:
   title: "Tuitorial"
   subtitle: "Zen and the Art of Terminal Tutorials"
   font: "slant"
-  gradient: "rainbow"
+  gradient: "lava"
 
 chapters:
   - title: "Introduction"
