--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ classifiers = [
     "Typing :: Typed",
 ]
 dependencies = [
+    "chardet>=5.2.0",
     "pyfiglet>=1.0.2",
     "pyyaml>=6.0.2",
     "rich",
