--- a/examples/pipefunc.yaml
+++ b/examples/pipefunc.yaml
@@ -113,7 +113,7 @@ chapters:
             style: "bright_yellow bold"
 
       - description: Output of [bold blue]pipeline.visualize()[/]
-        image: http://files.nijho.lt/pipeline.png
+        image: http://files.nijho.lt/pipeline-tuitorial-example.png
         height: auto
         width: 60%
 
